// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme closed-source 1`] = `
# readme-closed-source

Introduction ...

## Overview

* Layout: ...
* Languages: ...
* SEO: ...
* WAI: ...
* Clientside Tracking: ...
* Security: ...
* Methodology: ...
* Dates: ...
* Persons: ...

### Customer-Objectives

* ...
* ...

### Testing

* Browser Test Matrix: ...
* Javascript: ...
* Touch Support: ...
* Screen Resolutions/Retina: ...
* Print: ...
* Automated testing: ...
* Component testing: ...

## Development

### URL
* Specification: ...
* Wireframes: ...
* Styleguide: ...
* CVS: ...
* Jira: ...
* Prototype: ...
* Build: ...

### Guidelines

* [Code Guidelines](project/docs/___.md)
* Folder structure: ...
* Patterns: ...
* Dependencies: ...
* Progressive enhancement: ...
* Commit messages: ...

### Tech

* Doctype: ...
* HTML Head: ...
* UTF-8: overall
* Libraries: ...
* Webfonts: ...
* Clientside Storage: ...
* Licences: ...
* Performance-Budget: ...
* Interfaces/API: ...
* Documentation: ...

### Design

* Sources: ...
* Webfonts: ...
* Icons: ...
* Touch Icons: ...

## Setup

* [Setup Info](project/docs/___.md)
* Development in branch develop

## Integration/Deployment

* Protocols: ...
* Minification & Compression: ...

...

`;

exports[`readme closed-source 2`] = `
{
  "license": "UNLICENSED",
  "private": true
}
`;

exports[`readme closed-source 3`] = `
Array [
  README.md,
  package.json,
]
`;

exports[`readme open-source 1`] = `
"MIT License

Copyright (c) 2019-present Namics AG

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
"
`;

exports[`readme open-source 2`] = `
"
<div align=\\"center\\">
<br />
#logo
<br />
<br />
<br />

[![NPM version](https://badge.fury.io/js/readme-open-source.svg)](https://www.npmjs.com/package/readme-open-source) [![Travis](https://img.shields.io/travis/namics/readme-open-source/master.svg)](https://travis-ci.org/namics/readme-open-source)

[![License](https://img.shields.io/badge/license-MIT-green.svg)](http://opensource.org/licenses/MIT) [![Commitizen friendly](https://img.shields.io/badge/commitizen-friendly-brightgreen.svg)](http://commitizen.github.io/cz-cli/) [![Prettier](https://img.shields.io/badge/Code%20Style-Prettier-green.svg)](https://github.com/prettier/prettier) <!--IF(ts)-->![TypeScript-ready](https://img.shields.io/npm/types/readme-open-source.svg)<!--/IF-->

<h1>readme-open-source</h1>
<br />
#Description
<br />
<br />
</div>

## Table of Contents

## Installation

## Usage

## Contributing

## Credits

## License

The readme-open-source is [MIT licensed](./LICENSE)
"
`;

exports[`readme open-source 3`] = `
"{
  \\"license\\": \\"MIT\\",
  \\"private\\": false
}"
`;

exports[`readme open-source 4`] = `
Array [
  LICENSE,
  README.md,
  package.json,
]
`;
